@@ -45,6 +45,7 @@ class ImplementationItem(relationship.RelationshipItem):
             or head.connected_to and tail.connected_to \
                 and head.connected_to.subject != tail.connected_to.subject
 
+	print 'Implementation.allow_connect_handle:', can_connect
         return can_connect
 
 
@@ -56,6 +57,7 @@ class ImplementationItem(relationship.RelationshipItem):
             s2 = c2.subject
             relation = self.find_relationship(s1, s2)
             if not relation:
+		print 'No relationship found'
                 relation = gaphor.resource(UML.ElementFactory).create(UML.Implementation)
                 relation.contract = s1
                 relation.implementatingClassifier = s2
