@@ -1,3 +1,8 @@
+2004-06-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/UML/uml2.gaphor: fixed typo: implementingClassifier ->
+	implementatingClassifier.
+	
 2004-06-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/UML/uml2.gaphor: changed Interfaces diagram, so namespaces
